tests/testdata/run/fetch_async_error_stack.ts.out
error: Uncaught (in promise) TypeError: client error[WILDCARD]
await fetch("https://nonexistent.deno.land/");
^[WILDCARD]
    at async fetch (ext:[WILDCARD])
    at async file:///[WILDCARD]/fetch_async_error_stack.ts:1:1
